Significant refactoring - naming of vars, methods etc., DI, made all exceptions MojoExceptions, removed excessive comments.